# Flashcards-API

./: .coverage  .coveragerc  .env  .gitignore  Makefile  README.md  init.sql  mongodb.yml  mysql.yml  pyproject.toml  sentry.py
app/: __init__.py  api.py  credencials.py  dependencies.py  errors.py  graphql_error.py  schema.graphql  sentry.py
app/connections/: dependencies.py
app/controllers/: card_controller.py  deck_controller.py  subdeck_controller.py  user_controller.py  user_deck_controller.py  user_subdeck_controller.py
app/entities/: __init__.py  base_entity.py  card_entity.py  card_review_entity.py  deck_entity.py  deck_review_entity.py  review_difficulties_entity.py  subdeck_entity.py  subdeck_review_entity.py  user_entity.py
app/gql_config/: graphql_error.py  schema.graphql
app/graphql_config/: schema.graphql  schema_importer.py
app/models/: __init__.py  card.py  card_review.py  cards.py  deck.py  deck_review.py  schema_importer.py  subdeck.py  subdeck_review.py
app/repository/: base_repository.py  card_repository.py  (+6 more)
entities/: __init__.py  card_entity.py  deck_entity.py  review_difficulties_entity.py  review_difficulties_interval_time_entity.py  subdeck_entity.py  subdeck_review_entity.py  user_deck_entity.py  user_entity.py  user_subdeck_entity.py
repository/: base_repository.py  card_repository.py  deck_repository.py  subdeck_repository.py  user_repository.py
scripts/: init.sql
services/: base_service.py  card_service.py  deck_service.py  subdeck_service.py  user_service.py
tests/: insert_base.py  test_card_controller.py  test_cards.py
(+109 files in other folders)
