[tool.poetry]
name = "flashcards"
version = "0.1.0"
description = ""
authors = ["Victor Augusto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
sentry-sdk = "^1.29.2"
pymongo = "^4.4.1"
python-dotenv = "^1.0.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
ariadne = "^0.20.1"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.19"
mysql-connector-python = "^8.1.0"
pyjwt = "^2.8.0"
cryptography = "^41.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
pylint = "^2.17.5"
isort = "^5.12.0"
mypy = "^1.4.1"
coverage = "^7.2.7"
pytest = "^7.4.0"
python-graphql-client = "^0.4.3"
httpx = "^0.24.1"
commitizen = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
